--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #1a2130;
+  background-color: #0D1821;
 }
 
 /*
@@ -151,6 +151,12 @@ body {
   -webkit-box-orient: vertical;
 }
 
+.card-buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: auto;
+}
 .btn {
   display: inline-block;
   background-color: #007bff;
@@ -159,14 +165,30 @@ body {
   text-decoration: none;
   border-radius: 4px;
   transition: background-color 0.3s;
-  align-self: flex-start;
-  margin-top: auto;
 }
 
 .btn:hover {
   background-color: #0056b3;
 }
 
+.btn-secondary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f58396f4;
+  color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.btn-secondary:hover {
+  background-color: #0056b3;
+}
+
+.btn-secondary i {
+  font-size: 1.5rem; /* Increase the size of the heart icon */
+}
 /*
 ********************************************
 *******************SEARCH**************
@@ -178,16 +200,17 @@ form {
   margin-top: 120px;
 }
 
-input[type="text"]{
+input[type="text"] {
   width: 300px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   margin-right: 10px;
+  outline: none;
 }
 
 button {
-  padding: 10px 20px ;
+  padding: 10px 20px;
   border: none;
   background-color: #007bff;
   color: #fff;
@@ -199,6 +222,12 @@ button:hover {
   background-color: #0056b3;
 }
 
+.no-article-found {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #666;
+  margin: 20px 0;
+}
 /*
 ********************************************
 *******************PAGINATION**************
@@ -208,8 +237,9 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 20px 0;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .pagination span {
@@ -223,7 +253,7 @@ button:hover {
 }
 
 .pagination span:hover {
-  background-color: #0056b3; 
+  background-color: #0056b3;
 }
 
 .pagination span.disabled {
@@ -232,7 +262,7 @@ button:hover {
 }
 
 .pagination span.active {
-  background-color: #0056b3; 
+  background-color: #0056b3;
 }
 
 /* BREAKPOINTS*/
@@ -241,11 +271,20 @@ button:hover {
   .header {
     padding: 1.3rem 5%;
   }
-
-  
 }
 
 @media (max-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .custom-card,
+  .skeleton-custom-card {
+    width: 90%;
+    max-width: 345px;
+  }
   .icons {
     display: inline-flex;
   }
@@ -278,7 +317,7 @@ button:hover {
   }
 
   #check:checked ~ .navbar {
-    height: 17.7rem;
+    height: 26rem;
   }
 
   .navbar div {
